@@ -237,6 +237,17 @@ export.pdfExportCommand =
 ;fileImportRoot =
 
 ;----------------------------------------------------------------------
+; HEADERS SECTION
+;----------------------------------------------------------------------
+; Addetional headers to set for response
+;----------------------------------------------------------------------
+headers.X-Content-Type-Options = nosniff
+headers.X-Frame-Options        = DENY
+headers.X-UA-Compatible        = "IE=edge,chrome=1"
+headers.X-XSS-Protection       = 1
+;headers.X-XSS-Protection       = "1; mode=block"
+
+;----------------------------------------------------------------------
 ; HTTP SECTION
 ;----------------------------------------------------------------------
 ; Access using http instead of https must be explicitly
@@ -343,6 +354,22 @@ locales.nl = "nl"
 ;----------------------------------------------------------------------
 
 ;logLevel = 6;
+
+;----------------------------------------------------------------------
+; META SECTION
+;----------------------------------------------------------------------
+; Additional meta http-equiv => content headers for the site
+;
+; Content-Type              Defaults to "text/html;charset=UTF-8"
+; Content-Security-Policy   See https://www.w3.org/TR/2012/CR-CSP-20121115/
+; Strict-Transport-Security See https://en.wikipedia.org/wiki/HTTP_Strict_Transport_Security
+;----------------------------------------------------------------------
+meta.Content-Type              = "text/html;charset=UTF-8"
+;meta.Content-Security-Policy   = "default-src 'self' script-src 'self' 'unsafe-inline' style-src 'self' 'unsafe-inline'"
+meta.Content-Security-Policy   = "default-src 'self' script-src 'self' 'unsafe-inline' ajax.googleapis.com style-src 'self' 'unsafe-inline'"
+;meta.Strict-Transport-Security = "max-age=86400"
+meta.Strict-Transport-Security = "max-age=31536000"
+;meta.Strict-Transport-Security = "max-age=31536000; includeSubDomains"
 
 ;----------------------------------------------------------------------
 ; MONITOR SECTION
@@ -516,7 +543,6 @@ track.requireValidUntil = 1
 
 
 [acceptance: production]
-
 email.bounce = 1
 
 
@@ -545,6 +571,8 @@ admin.pwd  = superadmin
 
 email.bounce = 1
 email.staffBounce = 1
+
+meta.Strict-Transport-Security =
 
 passwords.notTheName = 0
 passwords.staff.capsCount = 0
